--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/znibblol/kanban#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mogoose": "0.0.1-security",
+    "mongoose": "^5.11.11",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
